--- a/html's/trajetoria.html
+++ b/html's/trajetoria.html
@@ -5,16 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="widthe=device-width, initial-scale=1.0">
         <title>Meu primeiro site - Sobre mim</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/style/index.css">
     </head> 
     <body> <!--corpo-->
         <nav> <!--barra de navegação-->
             <ul>
                 <li>
-                    <a href="index.html">Sobre mim</a>
+                    <a href="/index.html">Sobre mim</a>
                 </li>
                 <li>
-                    <a href="trajetoria.html">Minha trejetoria</a>
+                    <a href="./html's/trajetoria.html">Minha trejetoria</a>
                 </li>
                 <li>
                     <a href="projetos.html">Meus projetos</a>
