--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <a href="index.html">Sobre mim</a>
                 </li>
                 <li>
-                    <a href="trajetoria.html">Minha trajetoria</a>
+                    <a href="./html's/trajetoria.html">Minha trajetoria</a>
                 </li>
                 <li>
                     <a>Meus projetos</a>
