#bug-fix-newpallet

--- a/html's/index.html
+++ b/html's/index.html
@@ -14,7 +14,7 @@
                     <a href="index.html">Sobre mim</a>
                 </li>
                 <li>
-                    <a href="trajetoria.html">Minha trajetoria</a>
+                    <a href="./html's/trajetoria.html">Minha trajetoria</a>
                 </li>
                 <li>
                     <a>Meus projetos</a>
@@ -34,14 +34,7 @@
             <section>
                 <h3>Sobre mim</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna 
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit 
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-                    occaecat cupidatat non proident, sunt in culpa qui officia 
-                    deserunt mollit anim id est laborum
+                    
                 </p>
             </section>
             <section>
@@ -68,11 +61,11 @@
         <footer> <!--Rodapé-->
             <a href="https://github.com/JujubaMatos" target="_blank" rel="noopener noreferrer">
                 <img src="/img/github.svg"></img>
-                <p>Github</p>
+                <p class="center">Github</p>
             </a>
             <a href="https://www.linkedin.com/in/jo%C3%A3o-victor-s-matos-991140259/" target="_blank" rel="noopener noreferrer">
                 <img src="/img/linkedin.svg"></img>
-                <p>Linkedin</p>
+                <p class="center">Linkedin</p>
         </footer>
     </body>
 </html>
