--- a/html's/trajetoria.html
+++ b/html's/trajetoria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <body>
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,7 @@
         <title>Meu primeiro site - Sobre mim</title>
         <link rel="stylesheet" href="index.css">
     </head> 
-    <body> <!--corpo-->
+     <!--corpo-->
         <nav> <!--barra de navegação-->
             <ul>
                 <li>
