--- a/html's/trajetoria.html
+++ b/html's/trajetoria.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="widthe=device-width, initial-scale=1.0">
         <title>Meu primeiro site - Sobre mim</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/style/index.css">
     </head> 
      <!--corpo-->
         <nav> <!--barra de navegação-->
